--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  padding: 10px;
+  margin: 10px;
+  font-size: large;
+  font-weight: bold;
+  background-color: mediumturquoise;
+}
